Use SequencedCollection methods.